[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-data-quality-monitor"
version = "0.0.0"
description = "Scaffold for a data-quality monitor over a crypto transaction feed."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Benjamin", email = "berry.walker.jr@outlook.com" }]

[project.optional-dependencies]
# to be filled in next issues (dev/test/cli)

[tool]
# Reserved for future: black/isort/flake8/pytest configs